# easy-tui

./: LICENSE.md  README.md  build.bat  pyproject.toml
docs/: easy_tui.html  index.html  search.js
docs/easy_tui/: examples.html  menu.html  window.html
src/easy_tui/: __init__.py  examples.py  menu.py  window.py
