[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easy-x-tui"
version = "0.0.1"
authors = [
  { name="Stephen Funk", email="stephenlfunk@gmail.com" },
]
description = "A lightweight, cross-platform utility for creating TUIs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Source Code" = "https://github.com/stephenlf/easy-tui"
"Documentation" = "https://stephenlf.github.io/easy-tui"